# btc_swing_system

./: .env.example  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  README.md  logs_coinglass_test.txt  pyproject.toml
config/: ai.yaml  base.yaml  data_catalog.yaml  data_sources.yaml  event_calendar.yaml  layers.yaml  lifecycle_fsm.yaml  scheduler.yaml  schemas.yaml  state_machine.yaml  thresholds.yaml
data/: btc_strategy.db.bak.before_c4
docs/: BACKLOG.md  PROJECT_LOG.md  dev_setup.md  modeling.md  style_guide_human_readable.md
migrations/: 001_align_to_modeling_schema.sql  002_add_liquidation_columns.sql  003_drop_unused_empty_tables.sql  004_add_data_fetch_log.sql  005_add_inserted_at_utc.sql  006_add_event_throttle.sql  007_add_latest_factor_cards.sql  008_fix_review_reports_schema.sql  009_v14_virtual_account_thesis.sql  010_v14_fuse_system_states.sql  011_v14_validator_meta.sql  012_v14_retry_log.sql  013_v14_event_throttle_class.sql  014_v14_weekly_reviews.sql  015_v14_drop_old_columns.sql  016_add_fetch_attempts.sql  017_drop_data_fetch_log.sql  018_add_latest_layer_a_spot_strategy.sql
scripts/: backfill_data.py  build_analysis_package.py  check_ai_provider_health.py  check_coinglass_endpoints.py  check_glassnode_health.py  cleanup_hourly_pollution.py  cleanup_zero_liquidation.py  diagnose_orchestrator_real_api.py  fetch_btc_onchain_history.py  fetch_btc_swing_history.py  fix_review_reports_schema.py  init_v14_tables.py  migrate_2_7_d.py  probe_stooq_tickers.py  refresh_and_build.py  run_api.py  run_kpi_once.py  run_scheduler.py  (+21 more)
(+614 files in other folders)
