[project]
name = "btc-swing-system"
version = "0.0.1"
description = "BTC medium-to-long-term low-frequency bidirectional swing trading decision-support system"
requires-python = ">=3.12"
dependencies = [
    "pandas>=2.2",
    "numpy>=1.26",
    "pydantic>=2.6",
    "pyyaml>=6.0",
    "requests>=2.31",
    "fastapi>=0.110",
    "uvicorn>=0.29",
    "apscheduler>=3.10",
    "python-dotenv>=1.2.2",
    "yfinance>=1.3.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
]
