[project]
name = "btc-swing-system"
version = "0.0.1"
description = "BTC medium-to-long-term low-frequency bidirectional swing trading decision-support system"
requires-python = ">=3.12"
dependencies = [
    "pandas>=2.2",
    "numpy>=1.26",
    "pydantic>=2.6",
    "pyyaml>=6.0",
    "requests>=2.31",
    "fastapi>=0.110",
    "uvicorn>=0.29",
    "apscheduler>=3.10",
    "python-dotenv>=1.2.2",
    "yfinance>=1.3.0",
    "openai>=2.32.0",
    "httpx[socks]>=0.28.1",
]

[dependency-groups]
dev = [
    "markdown>=3.10.2",
    "pytest>=8.0",
]

[tool.pytest.ini_options]
# 让 pytest 能 import src.* 模块(src 是项目根下的命名空间包)
pythonpath = ["."]
testpaths = ["tests"]
